# llm-scribe

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
llamp/: agent.py  schema.py
llmamp/: agent.py  schema.py
llmscribe/: _base.py  agent.py  schema.py  utils.py
